ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
      alb.ingress.kubernetes.io/healthcheck-port: traffic-port
      alb.ingress.kubernetes.io/healthcheck-interval-seconds: '120'
      alb.ingress.kubernetes.io/target-group-attributes: slow_start.duration_seconds=120
      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
      alb.ingress.kubernetes.io/success-codes: '200'
      alb.ingress.kubernetes.io/healthy-threshold-count: '2'
      alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
      # alb.ingress.kubernetes.io/healthcheck-path: /health
spec:  
  rules:
  - http:
      paths:
      - path: /doctors
        pathType: Prefix
        backend:
          service:
            name: ms-medicos
            port:
              number: 3000
      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: ms-pacientes
            port:
              number: 3000
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: ms-consultas
            port:
              number: 3000
